<resources>
    <string name="app_name">Hafez</string>
    <string name="home">خانه</string>
    <string name="list">فهرست</string>
    <string name="omen">فال</string>
    <string name="search">جستجو</string>
    <string name="notebook">دفترچه</string>
    <string name="poem1">
الا یا ایها الساقی ادر کأسا و ناولها
       \n\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t
که عشق آسان نمود اول ولی افتاد مشکل‌ها
       \n\n
به بوی نافه‌ای کاخر صبا زان طره بگشاید
       \n\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t
ز تاب جعد مشکینش چه خون افتاد در دل‌ها
       \n\n
مرا در منزل جانان چه امن عیش چون هر دم
       \n\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t
جرس فریاد می‌دارد که بربندید محمل‌ها
       \n\n
به می سجاده رنگین کن گرت پیر مغان گوید
       \n\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t
که سالک بی‌خبر نبود ز راه و رسم منزل‌ها
       \n\n
شب تاریک و بیم موج و گردابی چنین هایل
       \n\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t
کجا دانند حال ما سبکباران ساحل‌ها
       \n\n
همه کارم ز خود کامی به بدنامی کشید آخر
       \n\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t
نهان کی ماند آن رازی کز او سازند محفل‌ها
       \n\n
حضوری گر همی‌خواهی از او غایب مشو حافظ
       \n\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t
متی ما تلق من تهوی دع الدنیا و اهملها
       \n\n
    </string>
    <string name="omenString">
        ای حافظ شیرازی
        \n
         تو محرم هر رازی
        \n
        تو را به خدا و شاخه نباتت قسم می دهم که هر چه صلاح و مصلحت می بینی برایم آشکار و ارزوی مرا براورده سازی
    </string>
    <string name="takeOmen">نیت کنید و لمس کنید </string>
    <string name="interpretation">
        تو موقعیتی هستی که ازت انتظار نظم و درایت میره اما تو فکرت مشغول چیز دیگه هست که تورو میبره به عاشقی و مستی و شادی
        \n
        سعی کن تعادلت رو در هر صورت حفظ کنی.
    </string>
    <string name="remove">حذف</string>
    <string name="save">ذخیره</string>
    <string name="notes">یادداشت ها</string>
    <string name="removeNote">
        این یادداشت واقعا حذف شود ؟
    </string>
    <string name="signs">نشانه ها</string>
    <string name="cancel">انصراف</string>

    <string name="example">
        Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google. It was unveiled in November 2007, with the first commercial Android device launched in September 2008.

It is free and open source software; its source code is known as Android Open Source Project (AOSP), which is primarily licensed under the Apache License. However most Android devices ship with additional proprietary software pre-installed,[10] most notably Google Mobile Services (GMS)[11] which includes core apps such as Google Chrome, the digital distribution platform Google Play and associated Google Play Services development platform. About 70 percent of Android smartphones run Google\'s ecosystem;[12] competing Android ecosystems and forks include Fire OS (developed by Amazon) or LineageOS. However the "Android" name and logo are trademarks of Google which impose standards to restrict "uncertified" devices outside their ecosystem to use Android branding.[13][14]


    </string>
    <string name="explainAndMean">شرح و معنی</string>
    <string name="poems">غزل ها</string>
    <string name="write">بنویسید</string>


</resources>