<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/removeDialogText"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="22dp"
        android:gravity="center"
        android:text="@string/removeNote"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/cancel"
        style="@style/cancel.Button.OutlinedButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cancel"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@id/removeNote2"
        app:layout_constraintStart_toStartOf="@id/removeDialogText"
        app:layout_constraintTop_toBottomOf="@id/removeDialogText" />

    <Button
        android:id="@+id/removeNote2"
        style="@style/remove.Button.OutlinedButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/remove"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/cancel"
        app:layout_constraintEnd_toEndOf="@id/removeDialogText"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintTop_toTopOf="@id/cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>