<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/notesDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="22dp"
        android:text="@string/notes"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/closeNotesDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:src="@drawable/close_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/notesDialogTitle" />

    <EditText
        android:id="@+id/notesDialogEditText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_input"
        android:gravity="right"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@id/notesDialogTitle"
        app:layout_constraintStart_toStartOf="@id/closeNotesDialog"
        app:layout_constraintTop_toBottomOf="@id/notesDialogTitle" />

    <Button
        android:id="@+id/saveNote"
        style="@style/save.Button.OutlinedButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/save"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="@id/notesDialogEditText"
        app:layout_constraintTop_toBottomOf="@id/notesDialogEditText" />

    <Button
        android:id="@+id/removeNote"
        style="@style/remove.Button.OutlinedButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/remove"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/saveNote"
        app:layout_constraintStart_toEndOf="@id/saveNote"
        app:layout_constraintTop_toTopOf="@id/saveNote" />


</androidx.constraintlayout.widget.ConstraintLayout>